Improve getCommentsByUsername logic #53