@@ -2,17 +2,16 @@ package com.tecnocampus.LS2.protube_back.domain.service;
 
 import com.tecnocampus.LS2.protube_back.domain.model.Comment;
 import com.tecnocampus.LS2.protube_back.port.in.command.GetCommentCommand;
-import com.tecnocampus.LS2.protube_back.port.in.useCase.GetAllCommentsUseCase;
+import com.tecnocampus.LS2.protube_back.port.in.useCase.GetCommentsByUsernameUseCase;
 import com.tecnocampus.LS2.protube_back.port.out.GetCommentPort;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class GetAllCommentsService implements GetAllCommentsUseCase {
+public class GetCommentsByUsernameService implements GetCommentsByUsernameUseCase {
     private final GetCommentPort getCommentPort;
 
     @Override
@@ -21,6 +20,6 @@ public class GetAllCommentsService implements GetAllCommentsUseCase {
 
         return comments.stream()
                 .map(GetCommentCommand::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
